# jtml

./: .gitignore  Cargo.toml  README.md
doc/: jtml.bnf
src/: convert_error.rs  converter.rs  formatter.rs  get_bnf.rs  html_converter.rs  html_generator.rs  html_generator_error.rs  jtml.lalrpop  jtml.rs  jtml_lexer.rs  jtml_parser.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/html_converter/: convert.rs  errors.rs
src/jtml_parser/: ast_node.rs  convert.rs  document.rs  element.rs  parser.rs  parser_error.rs  parsers.rs
src/jtml_parser/parser/: ast_node_parser.rs  ast_nodes_parser.rs  attributes_parser.rs  document_parser.rs  one_token_parser.rs
src/jtml_parser/parsers/: ast.rs  ast_node_parser.rs  ast_nodes_parser.rs  attributes.rs  attributes_parser.rs  document.rs  document_parser.rs  node.rs  nodes.rs  one_token.rs
src/jtml_parser/parsers/ast/: node.rs  root.rs
src/jtml_parser/parsers/ast/node/: element.rs
src/jtml_parser/parsers/ast/node/element/: attributes.rs  children.rs
src/jtml_parser/parsers/nodes/: ast.rs  document.rs
src/jtml_parser/parsers/nodes/ast/: attributes.rs  element.rs
src/parser/: child_element.rs  document.rs  element.rs  parser_error.rs
test_file/: index.html  index.jtml  with_comment.formatted_jtml  with_comment.jtml
test_file/html/: index.except.html
test_file/jtml/: index.html  index.jsml  index.jtml
