[package]
name = "alt-html"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.71"
structopt = "0.3.26"
logos="*"
